# efinance-cli

./: .gitignore  README.md  pyproject.toml
.skill/bond-research/: SKILL.md
.skill/efinance_cli/: SKILL.md
.skill/efinance_cli/agents/: openai.yaml
.skill/efinance_cli/references/: architecture-and-troubleshooting.md  command-catalog.json  indicator-guide.md
.skill/fund-research/: SKILL.md
.skill/futures-research/: SKILL.md
.skill/stock-research/: SKILL.md
docs/: 20260527-测试结论.html  20260528-测试结论.html  20260530-delta.html  20260601-raw-results.json  20260601-测试结论.html  akshare后端适配.html  akshare后端适配.md  cli-设计与使用说明.md  参数统一化清单.md  架构设计说明.md
efinance_cli/: __init__.py  __main__.py  app.py  command_catalog.py  commands.py  contracts.py  executor.py  facade.py  fund_compat.py  introspection.py  main.py  models.py  observation.py  registry.py  rendering.py  request_schema.py  retry_utils.py
efinance_cli/backends/: __init__.py  base.py  factory.py  providers.py  resolver.py
efinance_cli/enrichment/: service.py
efinance_cli/indicators/: __init__.py  base.py  chinese.py  momentum.py  price.py  trend.py  utils.py  volatility.py  volume.py
i18n/: README.zh-CN.md  README.zh-TW.md
scripts/: generate_html_report.py
tests/: __init__.py  cli_regression_support.py  conftest.py  full_api_regression.py  manual_retry_network_benchmark.py  test_cli_full_regression.py  test_enrichment_smoke.py  test_fund_compat.py  test_indicators_smoke.py  test_multi_backend_scaffold.py  test_observation_smoke.py  test_rendering_and_metrics_regression.py  test_retry_regression.py
(+84 files in other folders)
