[project]
name = "the-efinance-cli"
version = "0.2.0"
description = "efinance 命令行终端"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.4.1",
    "efinance>=0.5.8",
    "pandas",
    "vortezwohl>=0.1.3",
]

[project.scripts]
efinance = "efinance_cli.main:main"
efi = "efinance_cli.main:main"

[tool.setuptools.packages.find]
include = ["efinance_cli*"]
namespaces = false